--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
 
   </head>
   <body>
-      
+
     <div ng-app="robottiFrontApp" id="robot" ng-controller="RobotController">
         <p>Test</p>
     </div>
@@ -21,7 +21,7 @@
 
     <script src="scripts/app.js"></script>
     <script src="scripts/factories/question.js"></script>
-    <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/main.js"></script>
 
     <script>
         angular.element(document).ready(function () {
