--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,8 @@
 
     <script src="scripts/app.js"></script>
     <script src="scripts/factories/question.js"></script>
+    <script src="scripts/factories/answer.js"></script>
+    <script src="scripts/services/treeservice.js"></script>
     <script src="scripts/main.js"></script>
 
     <script>
