Created necessary services for data transfer, robo-question directive now gets updated data on answer. Next: visualization, chatlike layout

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
   <body>
 
     <div ng-app="robottiFrontApp" id="robot" ng-controller="RobotController">
-        <robo-tree tree="tree"></robo-tree>
+        <robo-tree></robo-tree>
     </div>
 
     <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -29,8 +29,10 @@
     <script src="scripts/factories/tree.js"></script>
 
     <script src="scripts/services/treeservice.js"></script>
+    <script src="scripts/services/questionservice.js"></script>
 
     <script src="scripts/directives/robo-tree.js"></script>
+    <script src="scripts/directives/robo-question.js"></script>
 
 </body>
 </html>
