--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,6 @@
   <meta name="viewport" content="width=device-width">
 
   <link rel="stylesheet" href="styles/main.css">
-  <link rel="stylesheet" href="styles/robot.css">
   <!--THESE STYLES FOR DEMO PURPOSES ONLY-->
   <style type="text/css">
     body,
@@ -33,11 +32,11 @@
 
 <body>
 
-  <!--THIS IFRAME FOR DEMO PURPOSES ONLY -->
+  <!--THIS IFRAME FOR DEMO PURPOSES ONLY
   <div id="sonera">
     <iframe width="100%" height="100%" frameborder="0" src="http://www.sonera.fi/yrityksille/pienet"></iframe>
   </div>
-  <!-- / -->
+   / -->
   <div ng-app="robottiFrontApp" id="robot" ng-controller="RobotController">
     <robo-tree></robo-tree>
   </div>
