--- a/app/management.html
+++ b/app/management.html
@@ -6,6 +6,7 @@
     <title>RoboConf</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="styles/main.css" />
+    <link rel="stylesheet" type="text/css" href="bower_components/angular-ui-tree/dist/angular-ui-tree.min.css">
   </head>
 
   <body ng-app="robottiFrontApp">
@@ -60,6 +61,7 @@
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/angular-ui-tree/dist/angular-ui-tree.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 
     <script src="scripts/app.js"></script>
