--- a/app/management.html
+++ b/app/management.html
@@ -6,7 +6,6 @@
     <title>RoboConf</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="styles/main.css" />
-    <link rel="stylesheet" type="text/css" href="bower_components/angular-ui-tree/dist/angular-ui-tree.min.css">
   </head>
 
   <body ng-app="robottiFrontApp">
@@ -43,8 +42,6 @@
           <ul class="nav nav-sidebar">
             <li ng-class="{ active: isActive('/')}"><a href="#/">Overview <span class="sr-only">(current)</span></a></li>
             <li ng-class="{ active: isActive('/newtree')}"><a href="#/newtree">New Dialog</a></li>
-            <li><a href="#">Lorem</a></li>
-            <li><a href="#">Ipsum</a></li>
           </ul>
         </div>
 
@@ -62,6 +59,7 @@
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-ui-tree/dist/angular-ui-tree.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 
     <script src="scripts/app.js"></script>
