--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,8 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
 
+  <link rel="stylesheet" href="bower_components/ng-dialog/css/ngDialog.css">
+  <link rel="stylesheet" href="bower_components/ng-dialog/css/ngdialog-theme-default.css">
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="styles/robotavatar.css">
   <!--THESE STYLES FOR DEMO PURPOSES ONLY-->
@@ -33,10 +35,6 @@
 
 <body>
 
-  <!--THIS IFRAME FOR DEMO PURPOSES ONLY -->
-  <div id="sonera">
-    <iframe width="100%" height="100%" frameborder="0" src="http://www.sonera.fi/yrityksille/pienet"></iframe>
-  </div>
    <!-- / -->
 
 <div  ng-app="robottiFrontApp" id="robot" ng-controller="RobotController">
@@ -89,12 +87,13 @@
   <script src="bower_components/jquery/dist/jquery.js"></script>
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-
+  <script src="bower_components/ng-dialog/js/ngDialog.js"></script>
 
   <!-- TODO BOOTSTRAP THESE-->
   <script src="scripts/app.js"></script>
   <script src="scripts/main.js"></script>
 
+  <script src="scripts/controllers/Dialog.js"></script>
   <script src="scripts/factories/question.js"></script>
   <script src="scripts/factories/answer.js"></script>
   <script src="scripts/factories/tree.js"></script>
