--- a/app/management.html
+++ b/app/management.html
@@ -44,11 +44,10 @@
             <li ng-class="{ active: isActive('/newtree')}"><a href="#/newtree">New Dialog</a></li>
           </ul>
         </div>
-
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
           <div class="view">
             <div ng-view>
-            <!-- partial views will be built inside this div -->
+            <!-- partial views will be built inside this div based on routing -->
             </div>
           </div>
         </div>
@@ -62,8 +61,9 @@
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 
     <script src="scripts/app.js"></script>
-    <script src="scripts/controllers/roboconf.js"></script>
-    <script src="scripts/controllers/sidenavctrl.js"></script>
+    <script src="scripts/controllers/newdialog.js"></script>
+    <script src="scripts/controllers/overview.js"></script>
+    <script src="scripts/controllers/sidenav.js"></script>
     
   </body>
 </html>
