questions working with new tree, data coming from back end. Post is still in progress

--- a/app/index.html
+++ b/app/index.html
@@ -102,6 +102,7 @@
 
   <script src="scripts/services/treeservice.js"></script>
   <script src="scripts/services/questionservice.js"></script>
+  <script src="scripts/services/answerservice.js"></script>
 
   <script src="scripts/directives/robo-tree.js"></script>
   <script src="scripts/directives/robo-question.js"></script>
