--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,6 @@
   <link rel="stylesheet" href="bower_components/ng-dialog/css/ngDialog.css">
   <link rel="stylesheet" href="bower_components/ng-dialog/css/ngdialog-theme-default.css">
   <link rel="stylesheet" href="styles/main.css">
-  <link rel="stylesheet" href="styles/robotavatar.css">
   <!--THESE STYLES FOR DEMO PURPOSES ONLY-->
   <style type="text/css">
     body,
@@ -35,50 +34,20 @@
 
 <body>
 
-
   <div id="sonera">
     <iframe width="100%" height="100%" frameborder="0" src="http://www.sonera.fi/yrityksille/pienet"></iframe>
   </div>
-
 
 <div ng-app="robottiFrontApp" id="robot" ng-controller="RobotController">
     <div class="container" ng-init="startAni2 = false;">
           <div class="box-base box2" ng-class="{'move-me': startAni2}">
 
-
-
-        <!--<input class="toggle" ng-click="startAni2 = !startAni2" type="image" src="images/Robotavatar.gif" style="width:45px;height:45px;"/> -->
-
-               <!--ROBOTAVATAR STARTS HERE
-       <div id="avatarbackground">
-        <div id="avatarleye">
-        </div>
-        <div id="avatarreye">
-        </div>
-        <div id="avatareyelids">
-        </div>
-       </div>
-       ROBOTAVATAR ENDS HERE-->
-
-
         <button class="toggle"
              ng-click="startAni2 = !startAni2">Myyntirobotti</button>
              <hr id="chat-stripe">
-
-        <!--ROBOTAVATAR STARTS HERE-->
-       <div id="avatarbackground">
-        <div id="avatarleye">
-        </div>
-        <div id="avatarreye">
-        </div>
-        <div id="avatareyelids">
-        </div>
-        <div id="avataragriculture">
-        </div>
-       </div>
-       <!--ROBOTAVATAR ENDS HERE-->
-
+             
         <div>
+        <robo-avatar></robo-avatar>
           <robo-tree></robo-tree>
       </div>
           </div>
@@ -106,6 +75,7 @@
 
   <script src="scripts/directives/robo-tree.js"></script>
   <script src="scripts/directives/robo-question.js"></script>
+  <script src="scripts/directives/robo-avatar.js"></script>
 
 
 </body>
