--- a/app/index.html
+++ b/app/index.html
@@ -45,18 +45,7 @@
 				<button class="toggle" ng-click="startAni2 = !startAni2">Myyntirobotti</button>
 				<hr id="chat-stripe">
 
-				<!--ROBOTAVATAR STARTS HERE-->
-				<div id="avatarbackground">
-					<div id="avatarleye">
-					</div>
-					<div id="avatarreye">
-					</div>
-					<div id="avatareyelids">
-					</div>
-					<div id="avataragriculture">
-					</div>
-				</div>
-				<!--ROBOTAVATAR ENDS HERE-->
+                <robo-avatar></robo-avatar>
 
 				<div>
 					<robo-tree></robo-tree>
@@ -84,6 +73,7 @@
 
 	<script src="scripts/directives/robo-tree.js"></script>
 	<script src="scripts/directives/robo-question.js"></script>
+    <script src="scripts/directives/robo-avatar.js"></script>
 
 </body>
 
