broken blink animation fixed

--- a/app/management.html
+++ b/app/management.html
@@ -13,6 +13,7 @@
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
+          <a class="navbar-brand"><robo-avatar></robo-avatar></a>
           <a class="navbar-brand" href="http://sonera.fi">
             <img class="sonera-logo" alt="Brand" src="favicon.ico">
           </a>
@@ -64,6 +65,7 @@
     <script src="scripts/controllers/newdialog.js"></script>
     <script src="scripts/controllers/overview.js"></script>
     <script src="scripts/controllers/sidenav.js"></script>
+    <script src="scripts/directives/robo-avatar.js"></script>
     
   </body>
 </html>
