--- a/app/management.html
+++ b/app/management.html
@@ -39,12 +39,7 @@
 
     <div class="container-fluid">
       <div class="row">
-        <div class="col-sm-3 col-md-2 sidebar" ng-controller="SideNavCtrl">
-          <ul class="nav nav-sidebar">
-            <li ng-class="{ active: isActive('/')}"><a href="#/">Overview <span class="sr-only">(current)</span></a></li>
-            <li ng-class="{ active: isActive('/newtree')}"><a href="#/newtree">New Dialog</a></li>
-          </ul>
-        </div>
+        <conf-sidenav></conf-sidenav>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
           <div class="view">
             <div ng-view>
@@ -63,8 +58,8 @@
 
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/newdialog.js"></script>
-    <script src="scripts/controllers/overview.js"></script>
-    <script src="scripts/controllers/sidenav.js"></script>
+    <script src="scripts/directives/conf-overview.js"></script>
+    <script src="scripts/directives/conf-sidenav.js"></script>
     <script src="scripts/directives/robo-avatar.js"></script>
     
   </body>
