--- a/app/management.html
+++ b/app/management.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>RoboConf</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="bower_components/toastr/toastr.css">
     <link rel="stylesheet" type="text/css" href="styles/main.css" />
   </head>
 
@@ -55,6 +56,7 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-ui-tree/dist/angular-ui-tree.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="bower_components/toastr/toastr.js"></script>
 
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/newdialog.js"></script>
