--- a/app/management.html
+++ b/app/management.html
@@ -29,7 +29,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="#/">Dialog</a></li>
-            <li><a href="#/">Analytics</a></li>
+            <li><a href="/stats">Analytics</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#/">Logout</a></li>
