--- a/app/management.html
+++ b/app/management.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand"><robo-avatar></robo-avatar></a>
+          <a class="navbar-brand"></a>
           <a class="navbar-brand" href="http://sonera.fi">
             <img class="sonera-logo" alt="Brand" src="favicon.ico">
           </a>
