--- a/app/management.html
+++ b/app/management.html
@@ -14,7 +14,6 @@
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand"></a>
           <a class="navbar-brand" href="http://sonera.fi">
             <img class="sonera-logo" alt="Brand" src="favicon.ico">
           </a>
@@ -28,8 +27,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#/">Dialog</a></li>
-            <li><a href="/stats">Analytics</a></li>
+            <li><a href="/stats">RoboAnalytics</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#/">Logout</a></li>
