--- a/app/index.html
+++ b/app/index.html
@@ -34,9 +34,9 @@
 
 <body>
 
-  <!-- <div id="sonera">
-    <iframe width="100%" height="100%" frameborder="0" src="http://www.sonera.fi/yrityksille/pienet"></iframe>
-  </div> -->
+    <div id="sonera">
+        <iframe width="100%" height="100%" frameborder="0" src="http://www.sonera.fi/yrityksille/pienet"></iframe>
+    </div>
 
 	<div ng-app="robottiFrontApp" id="robot" ng-controller="RobotController">
         <robo-question></robo-question>
